# minstant

./: .env.template  .gitignore  Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: communication.rs  main.rs
crates/server/: Cargo.toml
crates/server/.sqlx/: query-03696488ae3620228d8f6ef1a63503486dcfb76dc3a85cdf9352db60e0dee7cb.json  query-8d5ad26f003e5c9e3981fc447ed387102520078c368cdc663c9924690e93c67f.json  query-a779a6c9dcdc80f5226d1862ff196670bf7f0381bc1060d7c7257266ca63737f.json  query-ae1138fbaa700f68166c7edf9b8b4a877f05dbd896aa6d58921b201fe0598b1c.json  query-bbd6686f9421eacbcbfcf9eedc945fb4eb5b8febe24f55a7b27d37beaeeded71.json  query-eb4c36d10eb1544de63cae26968d14fd2a896049b85c32381b8029709a9bd5f8.json
crates/server/migrations/: 20231101141056_base.down.sql  20231101141056_base.up.sql  20231113213556_data.down.sql  20231113213556_data.up.sql
crates/server/src/: authentication.rs  login.rs  main.rs
crates/server/src/login/: get_handlers.rs  post_handlers.rs
migrations/: 20231101141056_base.down.sql  20231101141056_base.up.sql
src/: main.rs
