[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.190", features = ["derive"] }
shuttle-axum = "0.31"
shuttle-runtime = "0.31"
shuttle-shared-db = { version = "0.31", features = ["postgres"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "macros",
    "time",
    "postgres",
] }
tokio = "1.28.2"
time = "0.3.11"
axum-login = "0.7.0"
async-trait = "0.1.57"
tower = "0.4.13"
tower-sessions = "0.4.1"
password-auth = "1.0.0"
urlencoding = "2.1.3"
http = "0.2.9"
