[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.190", features = ["derive"] }
shuttle-axum = "0.30.0"
shuttle-runtime = "0.30.0"
shuttle-shared-db = { version = "0.30.1", features = ["postgres"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "macros",
    "time",
    "postgres",
] }
tokio = "1.28.2"
time = "0.3.11"
password-auth = "*"
# middleware
http = "*"
# session
cookie = "0.17.0"
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3.1"
rand = "*"
